crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_164_WaixingFinalFantasy_Digital_Dragon_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-164-WaixingFinalFantasy/Digital Dragon (Ch) [!].zip
rom_sha256=feb75b86cda5a76195107f9e6224df27cb485179ae0c0fc28480659dfc3bfb5f
frames=1141
fb_bytes=245760
cycles=33949961
audio_samples=836509
audio_fnv1a64=1e782101c2d1ead8
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
