crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_177_Hengedianzi_Mei_Guo_Fu_Hao_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-177-Hengedianzi/Mei Guo Fu Hao (Ch).nes
rom_sha256=5e9242fb68da57f83bd23537222b73ff5f90d0d70e714631c8e8439fa6c0c430
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=b103587a8356443b
checkpoint f900 fb_fnv1a64=100fcc4e2cc8bc34
checkpoint f1100 fb_fnv1a64=100fcc4e2cc8bc34
