crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_177_Hengedianzi_Xing_He_Zhan_Shi_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-177-Hengedianzi/Xing He Zhan Shi (Ch).nes
rom_sha256=93e986d6f9885affb0deb4ad0bcd23fef409f824d6799215b7f9c4d74b4f1f4a
frames=1141
fb_bytes=245760
cycles=33949961
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
