crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_177_Hengedianzi_Xing_Zhan_Qing_Yuan_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-177-Hengedianzi/Xing Zhan Qing Yuan (Ch).nes
rom_sha256=c31bdbb498e108e6256bff84d4ef76977f943c6f0793d5250b42789959b380a7
frames=1141
fb_bytes=245760
cycles=33949790
audio_samples=836505
audio_fnv1a64=bc03389e14ef308c
checkpoint f900 fb_fnv1a64=6780544e1a1e916f
checkpoint f1100 fb_fnv1a64=5feac02b9f9d7e67
