crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_178_WaixingEdu_SuborWin_2000_R.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-178-WaixingEdu/SuborWin 2000 (R) [!].nes
rom_sha256=d67b84b79eb3d767d9323c8458dc879c618cf4da0ca54c04dab33be2ee3ab4a4
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=9b347ca7ed24b247
checkpoint f900 fb_fnv1a64=a83d1c6f9cfecf4d
checkpoint f1100 fb_fnv1a64=a83d1c6f9cfecf4d
